# blib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
blib/include/: alloc.h  ints.h  platform.h  stdlib.h  string.h
blib/src/: string.c
test/: CMakeLists.txt
